--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
     <meta charset='UTF-8' />
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <title>hello world</title>
+    <title>{{data.title}}</title>
     <link
       href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css'
       rel='stylesheet'
@@ -12,17 +12,16 @@
     />
   </head>
   <body>
-    {{! { data: { hello: [{ users: 1 }, { users: 2 }, { users: 3 }, { users: 4 }] } } }}
-    {{!-- {{#if data}}
-      {{#each data.hello}}
-        <span>{{this.users}}</span>
+    {{#if isOk}}
+      {{#each data.developer}}
+        <span>{{this}}</span>
       {{/each}}
     {{else}}
-      <span>fuck</span>
-    {{/if}} --}}
+      <span>hello world!</span>
+    {{/if}}
 
+    <div id='hello_stranger'></div>
     <div id='chatting_box'></div>
-
     <form id='chat_form'>
       <input id='chat_message_input' type='text' />
       <button type='submit'>Submit</button>
@@ -37,7 +36,11 @@
       integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM'
       crossorigin='anonymous'
     ></script>
-    <script src='/socket.io/socket.io.js'></script>
-    <script src='script.js'></script>
+    <script
+      src='https://cdn.socket.io/3.1.3/socket.io.min.js'
+      integrity='sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh'
+      crossorigin='anonymous'
+    ></script>
+    <script src='js/script.js'></script>
   </body>
 </html>
