--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-<html lang='en'>
+<html lang='ko'>
   <head>
     <meta charset='UTF-8' />
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
@@ -10,6 +10,7 @@
       integrity='sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC'
       crossorigin='anonymous'
     />
+    <link href='css/styles.css' rel='stylesheet' />
   </head>
   <body>
     {{#if isOk}}
