--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,41 +1,74 @@
-<html lang='ko'>
+<html lang='en'>
   <head>
     <meta charset='UTF-8' />
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <meta
+      name='description'
+      content='This web site created by yoon-sang-seok'
+    />
     <title>{{data.title}}</title>
     <link
-      href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css'
+      href='https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css'
       rel='stylesheet'
-      integrity='sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC'
-      crossorigin='anonymous'
     />
     <link href='css/styles.css' rel='stylesheet' />
   </head>
   <body>
-    {{#if isOk}}
-      {{#each data.developer}}
-        <span>{{this}}</span>
-      {{/each}}
-    {{else}}
-      <span>hello world!</span>
+    <!-- {{#if isOk}} {{#each data.developer}}
+    <span>{{this}}</span>
+    {{/each}} {{else}}
+    <span>hello world!</span>
     {{/if}}
+    -->
+    <div style='overscroll-behavior: none'>
+      <div
+        class='fixed w-full bg-green-400 h-16 pt-2 text-white flex justify-between shadow-md'
+        style='top: 0px; overscroll-behavior: none'
+      >
+        <!-- Header Box -->
+        <div
+          id='hello_stranger'
+          class='my-3 text-green-100 font-bold text-lg tracking-wide'
+        >
+        </div>
+      </div>
+      <!-- Chatting Box -->
+      <div id='chatting_box' class='mt-20 mb-16 overflow-auto'></div>
+    </div>
 
-    <div id='hello_stranger'></div>
-    <div id='chatting_box'></div>
-    <form id='chat_form'>
-      <input id='chat_message_input' type='text' />
-      <button type='submit'>Submit</button>
+    <form
+      id='chat_form'
+      class='fixed w-full mt-5 mb-0 flex justify-between bg-green-100'
+      style='bottom: 0px'
+    >
+      <input
+        id='chat_message_input'
+        class='flex-grow m-2 py-2 px-4 mr-1 rounded-full border border-gray-300 bg-gray-200 resize-none'
+        placeholder='Chat...'
+        style='outline: none'
+      />
+      <button class='m-2' style='outline: none' type='submit'>
+        <svg
+          class='svg-inline--fa text-green-400 fa-paper-plane fa-w-16 w-12 h-12 py-2 mr-2'
+          aria-hidden='true'
+          focusable='false'
+          data-prefix='fas'
+          data-icon='paper-plane'
+          role='img'
+          viewBox='0 0 512 512'
+        >
+          <path
+            fill='currentColor'
+            d='M476 3.2L12.5 270.6c-18.1 10.4-15.8 35.6 2.2 43.2L121 358.4l287.3-253.2c5.5-4.9 13.3 2.6 8.6 8.3L176 407v80.5c0 23.6 28.5 32.9 42.5 15.8L282 426l124.6 52.2c14.2 6 30.4-2.9 33-18.2l72-432C515 7.8 493.3-6.8 476 3.2z'
+          ></path>
+        </svg>
+      </button>
     </form>
 
     <script src='https://unpkg.com/@babel/standalone/babel.min.js'></script>
     <script
       src='https://polyfill.io/v3/polyfill.min.js?features=default%2Ces2015%2Ces2016%2Ces2017%2Ces2018%2Ces2019'
-    ></script>
-    <script
-      src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js'
-      integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM'
-      crossorigin='anonymous'
     ></script>
     <script
       src='https://cdn.socket.io/3.1.3/socket.io.min.js'
